CMS-5106 Modal windows - Fix alignment of action buttons -updated name of classes used in "sticky footer" approach to not interfere with existing css class names

--- a/modules/admin-ui/src/main/resources/web/admin/common/styles/api/ui/dialog/modal-dialog.less
+++ b/modules/admin-ui/src/main/resources/web/admin/common/styles/api/ui/dialog/modal-dialog.less
@@ -11,12 +11,12 @@
   position: fixed;
   top: 50%;
 
-  .wrapper {
+  .modal-dialog-content-wrapper {
     min-height: 100%;
     height: 100%;
     margin: 0 auto -3em;
   }
-  .footer, .push {
+  .modal-dialog-footer, .modal-dialog-content-push {
     height: 3em;
   }
 
